# rust-poc

./: .env.example  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
bruno/: Create docker container.bru  Create user.bru  Delete user.bru  GET users.bru  bruno.json  create_initial_user.bru  login.bru  logout.bru  me.bru  test.bru
bruno/auth/: login.bru  logout.bru  me.bru
bruno/container/: Create docker container.bru  Get status of container.bru  folder.bru
bruno/user/: Create user.bru  Delete user.bru  GET users.bru
migration/src/: m20220101_000001_create_table.rs
scripts/: add_infinite_users.sh  generate_entities.sh  postgres.sh
scripts/test_api/: test_delete.sh  test_get.sh  test_post.sh
src/: main.rs
src/modules/: errors.rs  mod.rs  responses.rs  states.rs  types.rs
src/modules/auth/: domain.rs  dto.rs  extractor.rs  middleware.rs  mod.rs  route.rs  service.rs
src/modules/docker/: dto.rs  mod.rs  payload.rs  route.rs  service.rs
src/modules/models/: mod.rs
src/modules/models/entities/: lib.rs  permission.rs  post.rs  prelude.rs  role.rs  session.rs  user.rs
src/modules/session/: domain.rs  dto.rs  mod.rs  service.rs
src/modules/user/: dto.rs  mod.rs  payload.rs  route.rs  service.rs
src/utils/: cfg.rs  extractor.rs  mod.rs
