cargo-features = ["codegen-backend"]
[package]
name = "axum-server-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["tracing", "json", "macros"] }
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc.30", features = [
    "macros",
    "with-json",
    "time",
    "with-uuid",
    "with-chrono",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
anyhow = "1.0.100"
tower-http = { version = "0.6.8", features = ["trace"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
rand = "0.9.2"
uuid = { version = "1.20.0", features = ["v4"] }
tikv-jemallocator = "0.6.1"
http-body-util = "0.1.3"
async-trait = "0.1.89"
openssl = { version = "0.10.75", features = ["vendored"] }
[workspace]
members = [".", "migration"]


[profile.dev]
debug = "line-tables-only"
strip = false
panic = "abort"
split-debuginfo = "off"
codegen-backend = "cranelift"
